--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1413,3 +1413,291 @@ h6,
 #features1-34 .mbr-cards-col:nth-child(even) .card-title {
   color: #174034;
 }
+#menu-37 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-37 .navbar-caption {
+  color: #ffffff;
+}
+#menu-37 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-37 .link,
+#menu-37 .dropdown-item {
+  color: #ffffff;
+}
+#menu-37 .link {
+  font-size: 0.75rem;
+}
+#menu-37 .dropdown-item,
+#menu-37 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-37 .link:hover,
+#menu-37 .dropdown-item:hover,
+#menu-37 .link:focus,
+#menu-37 .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-37 .link[aria-expanded="true"],
+#menu-37 .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-37 .nav-dropdown-sm .link:focus,
+#menu-37 .nav-dropdown-sm .link:hover,
+#menu-37 .nav-dropdown-sm .dropdown-item:focus,
+#menu-37 .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-37 .navbar,
+#menu-37 .nav-dropdown-sm,
+#menu-37 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-37 .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-37 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-37 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-37 .bg-color.transparent.opened .link:hover,
+#menu-37 .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-37 .link[aria-expanded="true"],
+#menu-37 .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-37.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-37 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-37 .close-icon::before,
+#menu-37 .close-icon::after {
+  background-color: #ffffff;
+}
+#msg-box8-39 .mbr-section-title,
+#msg-box8-39 p {
+  color: #fff;
+}
+#menu-3q .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-3q .navbar-caption {
+  color: #ffffff;
+}
+#menu-3q .navbar-toggler {
+  color: #ffffff;
+}
+#menu-3q .link,
+#menu-3q .dropdown-item {
+  color: #ffffff;
+}
+#menu-3q .link {
+  font-size: 0.75rem;
+}
+#menu-3q .dropdown-item,
+#menu-3q .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-3q .link:hover,
+#menu-3q .dropdown-item:hover,
+#menu-3q .link:focus,
+#menu-3q .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-3q .link[aria-expanded="true"],
+#menu-3q .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-3q .nav-dropdown-sm .link:focus,
+#menu-3q .nav-dropdown-sm .link:hover,
+#menu-3q .nav-dropdown-sm .dropdown-item:focus,
+#menu-3q .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-3q .navbar,
+#menu-3q .nav-dropdown-sm,
+#menu-3q .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-3q .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-3q .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-3q .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-3q .bg-color.transparent.opened .link:hover,
+#menu-3q .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-3q .link[aria-expanded="true"],
+#menu-3q .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-3q.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-3q .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-3q .close-icon::before,
+#menu-3q .close-icon::after {
+  background-color: #ffffff;
+}
+#msg-box8-3s .mbr-section-title,
+#msg-box8-3s p {
+  color: #fff;
+}
+#header3-3w .mbr-section-title,
+#header3-3w .mbr-section-subtitle {
+  text-align: center;
+}
+#menu-3z .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-3z .navbar-caption {
+  color: #ffffff;
+}
+#menu-3z .navbar-toggler {
+  color: #ffffff;
+}
+#menu-3z .link,
+#menu-3z .dropdown-item {
+  color: #ffffff;
+}
+#menu-3z .link {
+  font-size: 0.75rem;
+}
+#menu-3z .dropdown-item,
+#menu-3z .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-3z .link:hover,
+#menu-3z .dropdown-item:hover,
+#menu-3z .link:focus,
+#menu-3z .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-3z .link[aria-expanded="true"],
+#menu-3z .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-3z .nav-dropdown-sm .link:focus,
+#menu-3z .nav-dropdown-sm .link:hover,
+#menu-3z .nav-dropdown-sm .dropdown-item:focus,
+#menu-3z .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-3z .navbar,
+#menu-3z .nav-dropdown-sm,
+#menu-3z .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-3z .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-3z .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-3z .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-3z .bg-color.transparent.opened .link:hover,
+#menu-3z .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-3z .link[aria-expanded="true"],
+#menu-3z .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-3z.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-3z .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-3z .close-icon::before,
+#menu-3z .close-icon::after {
+  background-color: #ffffff;
+}
+#menu-42 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-42 .navbar-caption {
+  color: #ffffff;
+}
+#menu-42 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-42 .link,
+#menu-42 .dropdown-item {
+  color: #ffffff;
+}
+#menu-42 .link {
+  font-size: 0.75rem;
+}
+#menu-42 .dropdown-item,
+#menu-42 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-42 .link:hover,
+#menu-42 .dropdown-item:hover,
+#menu-42 .link:focus,
+#menu-42 .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-42 .link[aria-expanded="true"],
+#menu-42 .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-42 .nav-dropdown-sm .link:focus,
+#menu-42 .nav-dropdown-sm .link:hover,
+#menu-42 .nav-dropdown-sm .dropdown-item:focus,
+#menu-42 .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-42 .navbar,
+#menu-42 .nav-dropdown-sm,
+#menu-42 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-42 .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-42 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-42 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-42 .bg-color.transparent.opened .link:hover,
+#menu-42 .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-42 .link[aria-expanded="true"],
+#menu-42 .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-42.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-42 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-42 .close-icon::before,
+#menu-42 .close-icon::after {
+  background-color: #ffffff;
+}
+#msg-box8-44 .mbr-section-title,
+#msg-box8-44 p {
+  color: #fff;
+}
+#header3-48 .mbr-section-title,
+#header3-48 .mbr-section-subtitle {
+  text-align: center;
+}
