--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1923,3 +1923,74 @@ h6,
 #msg-box8-59 p {
   color: #fff;
 }
+#menu-5h .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-5h .navbar-caption {
+  color: #ffffff;
+}
+#menu-5h .navbar-toggler {
+  color: #ffffff;
+}
+#menu-5h .link,
+#menu-5h .dropdown-item {
+  color: #ffffff;
+}
+#menu-5h .link {
+  font-size: 0.75rem;
+}
+#menu-5h .dropdown-item,
+#menu-5h .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-5h .link:hover,
+#menu-5h .dropdown-item:hover,
+#menu-5h .link:focus,
+#menu-5h .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-5h .link[aria-expanded="true"],
+#menu-5h .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-5h .nav-dropdown-sm .link:focus,
+#menu-5h .nav-dropdown-sm .link:hover,
+#menu-5h .nav-dropdown-sm .dropdown-item:focus,
+#menu-5h .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-5h .navbar,
+#menu-5h .nav-dropdown-sm,
+#menu-5h .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-5h .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-5h .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-5h .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-5h .bg-color.transparent.opened .link:hover,
+#menu-5h .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-5h .link[aria-expanded="true"],
+#menu-5h .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-5h.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-5h .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-5h .close-icon::before,
+#menu-5h .close-icon::after {
+  background-color: #ffffff;
+}
+#msg-box8-5j .mbr-section-title,
+#msg-box8-5j p {
+  color: #fff;
+}
